--- a/FastFood-App/Dockerfile
+++ b/FastFood-App/Dockerfile
@@ -13,10 +13,10 @@ RUN npm run build
 RUN rm -rf node_modules
 RUN npm install
 
-FROM node:16-alpine3.16
-ENV NODE_ENV production
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S angular -u 1001
+# FROM node:16-alpine3.16
+# ENV NODE_ENV production
+# RUN addgroup -g 1001 -S nodejs
+# RUN adduser -S angular -u 1001
 
 WORKDIR /app
 COPY --from=build_image --chown=angular:nodejs /app/package.json ./
@@ -25,8 +25,3 @@ COPY --from=build_image --chown=angular:nodejs /app/node_modules ./node_modules
 USER angular
 EXPOSE 4300
 CMD ["npm","start"]
-
-
-
-
-
