--- a/FastFood-App/Dockerfile
+++ b/FastFood-App/Dockerfile
@@ -30,13 +30,14 @@
 
 FROM node:16-alpine3.16 as base
 WORKDIR /app
-COPY package.json /app
+COPY package.json package-lock.json ./
 RUN npm install
 
 FROM node:16-alpine3.16 as build
 WORKDIR /app
-COPY --from=base /app/node_modules ./node_modules
+# COPY --from=base /app/node_modules ./node_modules
 COPY . .
-RUN npm run build
 
-CMD [ "npm", "start" ]
+# RUN npm run build
+
+CMD [ "ng", "serve" ]
