--- a/FastFood-App/Dockerfile
+++ b/FastFood-App/Dockerfile
@@ -30,14 +30,10 @@
 
 FROM node:16-alpine3.16 as base
 WORKDIR /app
-COPY package.json package-lock.json ./
+COPY package*.json ./
 RUN npm install
-
-FROM node:16-alpine3.16 as build
-WORKDIR /app
-# COPY --from=base /app/node_modules ./node_modules
 COPY . .
-
+RUN npm run build
 # RUN npm run build
-
+EXPOSE 4200
 CMD [ "npm", "start" ]
