--- a/FastFood-App/Dockerfile
+++ b/FastFood-App/Dockerfile
@@ -33,6 +33,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN NODE_OPTIONS="--max-old-space-size=8192" yarn build
 RUN npm run build
 # RUN npm run build
 EXPOSE 4200
