--- a/FastFood-App/Dockerfile
+++ b/FastFood-App/Dockerfile
@@ -29,10 +29,11 @@
 # CMD ["npm","start"]
 
 FROM node:16-alpine3.16 as base
-WORKDIR /app
-COPY package*.json ./
+WORKDIR /usr/local/app
+COPY ./ /usr/local/app
 RUN npm install
-COPY . .
 RUN npm run build
-EXPOSE 4200
-CMD [ "npm", "start" ]
+
+FROM nginx:latest
+COPY --from=base /usr/local/app/dist/fast-food-app /usr/share/nginx/html
+EXPOSE 80
